<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ec.ug.ottonavdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ec.ug.ottonavdrawer.ui.usuario.UsuarioFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_usuarios" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ec.ug.ottonavdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_slideshow" />
</navigation>