<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ninia_libro"
    tools:context=".controller.MenuProfEstud">

    <Button
        android:id="@+id/btn_estudiane"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login"
        android:text="@string/btn_profesor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_profesor2"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/btn_login"
        android:text="Prueba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_estudiane" />

    <Button
        android:id="@+id/btn_profesor"
        android:layout_width="304dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/btn_login"
        android:text="@string/btn_estudiante"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_estudiane" />

    <TextView
        android:id="@+id/lbl_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_title"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="374dp"
        android:layout_height="85dp"
        android:layout_marginTop="116dp"
        android:text="@string/lbl_mensaje_principal"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_titulo" />
</androidx.constraintlayout.widget.ConstraintLayout>