<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada_oto_fondo"
    tools:context=".controller.profesor.LoginProfesor">


    <ImageView
        android:id="@+id/logo_profe"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_video_away"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/lbl_olvido_profe"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:text="@string/txt_olvido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/btn_ingresar_prof"
        android:layout_width="312dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:text="@string/btn_ingresar"
        android:background="@drawable/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_olvido_profe" />

    <Button
        android:id="@+id/btn_cancelar_prof"
        android:layout_width="312dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:background="@drawable/btn_round_black"
        android:text="@string/btn_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingresar_prof" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="353dp"
        android:layout_height="57dp"
        android:layout_marginTop="52dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        app:helperText="*Requerido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_profe"
        app:startIconDrawable="@drawable/account_outline"
        app:startIconTint="#8F255D00">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_usu_profesor"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:freezesText="false"
            android:hint="Usuario"
            android:textAlignment="textStart"
            android:minHeight="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="353dp"
        android:layout_height="57dp"

        android:layout_marginTop="36dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="password_toggle"
        app:endIconTint="#8F255D00"
        app:helperText="*Requerido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@android:drawable/ic_lock_lock"
        app:startIconTint="#8F255D00">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_pass_profesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Cotraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>