<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bosque_libro"
    tools:context=".controller.estudiante.LoginEstudiante">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/presence_video_away" />

    <TextView
        android:id="@+id/lbl_olvido"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_olvido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/btn_ingresar_est"
        android:layout_width="312dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_ingresar"
        android:background="@drawable/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_olvido" />

    <Button
        android:id="@+id/btn_cancelar_est"
        android:layout_width="312dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_round"
        android:text="@string/btn_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingresar_est" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="353dp"
        android:layout_height="57dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:startIconDrawable="@android:drawable/ic_menu_my_calendar"
        app:helperText="*Reuqerido"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_usu_estudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Usuario"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="358dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:helperText="*Reuqerido"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="password_toggle"

        app:startIconDrawable="@android:drawable/ic_menu_my_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_pass_estudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cotraseña"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>



    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="Usuario"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"/>-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>